updated path for Sudoku.js

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,7 +12,8 @@
   <script src="lib/jasmine-2.4.1/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/Sudoku.js"></script>
+  <script src="public/src/Sudoku.js"></script>
+
 
   <!-- include spec files here... -->
   <script src="spec/SudokuSpec.js"></script>
